Added prelogin, login and signup layouts with navigation and material design

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/preLoginFragment">
 
+    <fragment
+        android:id="@+id/preLoginFragment"
+        android:name="com.yashovardhan99.firebaselogin.PreLoginFragment"
+        android:label="fragment_prelogin"
+        tools:layout="@layout/fragment_prelogin" >
+        <action
+            android:id="@+id/action_preLoginFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@+id/preLoginFragment" />
+        <action
+            android:id="@+id/action_preLoginFragment_to_signupFragment"
+            app:destination="@id/signupFragment"
+            app:popUpTo="@+id/preLoginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.yashovardhan99.firebaselogin.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" />
+    <fragment
+        android:id="@+id/signupFragment"
+        android:name="com.yashovardhan99.firebaselogin.SignupFragment"
+        android:label="fragment_signup"
+        tools:layout="@layout/fragment_signup" />
 </navigation>
