--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -11,19 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/logo"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/ic_launcher_background"
-            android:contentDescription="@string/logo"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground"
-            app:layout_constraintBottom_toTopOf="@id/name_inputelayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/name_inputelayout"
             android:layout_width="match_parent"
@@ -32,10 +25,6 @@
             android:focusedByDefault="true"
             android:hint="@string/name"
             android:nextFocusDown="@id/email_inputlayout"
-            app:layout_constraintBottom_toTopOf="@id/email_inputlayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/logo"
             tools:ignore="UnusedAttribute">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -51,11 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:hint="@string/email_address"
-            android:nextFocusDown="@id/password_inputlayout"
-            app:layout_constraintBottom_toTopOf="@id/password_inputlayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
+            android:nextFocusDown="@id/password_inputlayout">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email_edittext"
                 android:layout_width="match_parent"
@@ -89,9 +74,6 @@
             android:layout_margin="8dp"
             android:hint="@string/confirm_password"
             android:nextFocusDown="@id/signup_button"
-            app:layout_constraintBottom_toTopOf="@id/signup_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -106,8 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="16dp"
-            android:text="@string/sign_up"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
+            android:text="@string/sign_up" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
