--- a/app/src/main/res/layout/fragment_prelogin.xml
+++ b/app/src/main/res/layout/fragment_prelogin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -37,6 +38,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/signup_button"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            app:strokeColor="@color/colorPrimaryLight"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
