--- a/app/src/main/res/layout/fragment_prelogin.xml
+++ b/app/src/main/res/layout/fragment_prelogin.xml
@@ -24,6 +24,18 @@
         <!-- Instead of an image view here, you can also use a slideshow of images
         to introduce users to your app. It all comes down to your choice-->
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/login_button"
+            android:layout_below="@id/logo"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="16dp"
+            android:padding="16dp"
+            android:text="App Name Here"
+            android:textAlignment="center"
+            android:textSize="48sp" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/login_button"
             style="@style/Widget.MaterialComponents.Button"
@@ -41,7 +53,9 @@
             app:strokeColor="@color/colorPrimaryLight"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:padding="16dp"
             android:text="@string/sign_up"
             android:layout_alignParentBottom="true"
