Added firebase code for login page as well

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,6 +44,7 @@
                 android:nextFocusDown="@id/login_button">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password_edittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword" />
