--- a/app/src/main/res/layout/fragment_prelogin.xml
+++ b/app/src/main/res/layout/fragment_prelogin.xml
@@ -55,11 +55,24 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_above="@id/anonymous_button"
             android:padding="16dp"
             android:text="@string/sign_up"
-            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="8dp"
             android:layout_centerHorizontal="true" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/anonymous_button"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/continue_without_signing_in"
+            android:textAlignment="center" />
 
     </RelativeLayout>
 </layout>
