Minor design changes

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:hint="@string/password"
+                app:passwordToggleEnabled="true"
                 android:nextFocusDown="@id/login_button">
 
                 <com.google.android.material.textfield.TextInputEditText
