--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,6 +60,7 @@
                 android:text="@string/login" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/resetPasswordButton"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
