--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:padding="16dp"
-                android:text="Sign Out" />
+                android:text="@string/sign_out" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/changePassword_button"
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:padding="16dp"
-                android:text="Change Password" />
+                android:text="@string/change_password" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/delete_button"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:padding="16dp"
-                android:text="Delete Account"
+                android:text="@string/delete_account"
                 app:strokeColor="@color/colorPrimary" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
